--- a/M1:D4/homework.html
+++ b/M1:D4/homework.html
@@ -5,11 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/ab2fcb7d7c.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Pinterest mockup</title>
   </head>
   <body>
     <div id="maincard">
+      <div id="maincard-overlay"></div>
+
       <img src="assets/anakin.JPG" alt="picture" />
+      <div id="savebutton" style="font-style: bold">Save</div>
+      <div id="link"><i class="fa-solid fa-square-arrow-up-right fa"></i>placeoflink</div>
+      <div id="share"><i class="fa-solid fa-arrow-up-from-bracket fa-xl"></div>
+      <div id="dotdotdot"><i class="fa-solid fa-ellipsis fa-xl"></i></div>
     </div>
   </body>
 </html>
