--- a/M1:D4/homework.html
+++ b/M1:D4/homework.html
@@ -17,8 +17,12 @@
 
       <img src="assets/anakin.JPG" alt="picture" />
       <div id="savebutton" style="font-style: bold">Save</div>
-      <div id="link"><i class="fa-solid fa-square-arrow-up-right fa"></i>placeoflink</div>
-      <div id="share"><i class="fa-solid fa-arrow-up-from-bracket fa-xl"></div>
+      <div id="link">
+        <i class="fa-solid fa-square-arrow-up-right"></i>placeoflink
+      </div>
+      <div id="share">
+        <i class="fa-solid fa-arrow-up-from-bracket fa-xl"></i>
+      </div>
       <div id="dotdotdot"><i class="fa-solid fa-ellipsis fa-xl"></i></div>
     </div>
   </body>
